--- a/.gitignore
+++ b/.gitignore
@@ -11,13 +11,17 @@
 # production
 /build
 
+# server
+
+/server/.env
+/server/node_modules
+
 # misc
 .DS_Store
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
-server/.env
 
 npm-debug.log*
 yarn-debug.log*
