--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.115",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
+    "axios": "^1.7.8",
     "libphonenumber-js": "^1.11.15",
     "react": "^18.3.1",
     "react-blurhash": "^0.3.0",
