--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.3.1",
     "axios": "^1.7.8",
     "libphonenumber-js": "^1.11.15",
+    "lodash": "^4.17.21",
     "react": "^18.3.1",
     "react-blurhash": "^0.3.0",
     "react-dom": "^18.3.1",
@@ -51,6 +52,7 @@
     ]
   },
   "devDependencies": {
+    "@types/lodash": "^4.17.13",
     "@types/react-transition-group": "^4.4.11"
   }
 }
